Added .png output

--- a/analyses/fda/visualize_categories.ipynb
+++ b/analyses/fda/visualize_categories.ipynb
@@ -971,7 +971,8 @@
     "    show_categories = True,\n",
     "    show_legend = False\n",
     ")\n",
-    "p_with_categories.figure.savefig('fda_categorical_variants.svg', bbox_inches = 'tight', dpi = 300)"
+    "p_with_categories.figure.savefig('fda_categorical_variants.svg', bbox_inches = 'tight', dpi = 300)\n",
+    "p_with_categories.figure.savefig('fda_categorical_variants.png', bbox_inches = 'tight', dpi = 300)"
    ]
   },
   {
@@ -1005,7 +1006,8 @@
     "    show_categories = False,\n",
     "    show_legend = False\n",
     ")\n",
-    "p_without_categories.figure.savefig('fda_categorical_variants.hide_categories.svg', bbox_inches = 'tight', dpi = 300)"
+    "p_without_categories.figure.savefig('fda_categorical_variants.hide_categories.svg', bbox_inches = 'tight', dpi = 300)\n",
+    "p_without_categories.figure.savefig('fda_categorical_variants.hide_categories.png', bbox_inches = 'tight', dpi = 300)"
    ]
   },
   {
